[package]
name = "kaspa-vanity"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
hex = "0.4"
kaspa-addresses = "0.15.0"
num_cpus = "1"
rand = "0.8"
secp256k1 = { version = "0.29", features = ["rand"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
